--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -30,4 +30,4 @@ jobs:
         goos: ${{ matrix.goos }}
         goarch: ${{ matrix.goarch }}
         project_path: "./cmd/twitch-clips"
-        extra_files: LICENSE README.MD
+        extra_files: LICENSE INSTRUCTIONS.txt
